; ModuleID = '/home/carl/AnghaBench/mpv/osdep/extr_terminal-unix.c_terminal_init.c'
source_filename = "/home/carl/AnghaBench/mpv/osdep/extr_terminal-unix.c_terminal_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@getch2_enabled = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"/dev/tty\00", align 1
@O_RDWR = common dso_local global i32 0, align 4
@O_CLOEXEC = common dso_local global i32 0, align 4
@tty_out = common dso_local global i64 0, align 8
@tty_in = common dso_local global i64 0, align 8
@STDIN_FILENO = common dso_local global i64 0, align 8
@STDOUT_FILENO = common dso_local global i64 0, align 8
@SIGCONT = common dso_local global i32 0, align 4
@continue_sighandler = common dso_local global i32 0, align 4
@SIGTSTP = common dso_local global i32 0, align 4
@stop_sighandler = common dso_local global i32 0, align 4
@SA_RESETHAND = common dso_local global i32 0, align 4
@SIGTTIN = common dso_local global i32 0, align 4
@SIG_IGN = common dso_local global i32 0, align 4
@SIGTTOU = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @terminal_init() #0 {
  %1 = load i32, i32* @getch2_enabled, align 4
  %2 = icmp ne i32 %1, 0
  %3 = xor i1 %2, true
  %4 = zext i1 %3 to i32
  %5 = call i32 @assert(i32 %4)
  store i32 1, i32* @getch2_enabled, align 4
  %6 = load i32, i32* @O_RDWR, align 4
  %7 = load i32, i32* @O_CLOEXEC, align 4
  %8 = or i32 %6, %7
  %9 = call i64 @open(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %8)
  store i64 %9, i64* @tty_out, align 8
  store i64 %9, i64* @tty_in, align 8
  %10 = load i64, i64* @tty_in, align 8
  %11 = icmp slt i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %0
  %13 = load i64, i64* @STDIN_FILENO, align 8
  store i64 %13, i64* @tty_in, align 8
  %14 = load i64, i64* @STDOUT_FILENO, align 8
  store i64 %14, i64* @tty_out, align 8
  br label %15

15:                                               ; preds = %12, %0
  %16 = load i32, i32* @SIGCONT, align 4
  %17 = load i32, i32* @continue_sighandler, align 4
  %18 = call i32 @setsigaction(i32 %16, i32 %17, i32 0, i32 1)
  %19 = load i32, i32* @SIGTSTP, align 4
  %20 = load i32, i32* @stop_sighandler, align 4
  %21 = load i32, i32* @SA_RESETHAND, align 4
  %22 = call i32 @setsigaction(i32 %19, i32 %20, i32 %21, i32 0)
  %23 = load i32, i32* @SIGTTIN, align 4
  %24 = load i32, i32* @SIG_IGN, align 4
  %25 = call i32 @setsigaction(i32 %23, i32 %24, i32 0, i32 1)
  %26 = load i32, i32* @SIGTTOU, align 4
  %27 = load i32, i32* @SIG_IGN, align 4
  %28 = call i32 @setsigaction(i32 %26, i32 %27, i32 0, i32 1)
  %29 = call i32 (...) @getch2_poll()
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @open(i8*, i32) #1

declare dso_local i32 @setsigaction(i32, i32, i32, i32) #1

declare dso_local i32 @getch2_poll(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
